@@ -761,25 +761,24 @@ Tcl_SetObjLength(
 
     if (length > (int) stringPtr->allocated &&
 	    (objPtr->bytes != NULL || stringPtr->hasUnicode == 0)) {
-	char *new;
 
 	/*
 	 * Not enough space in current string. Reallocate the string space and
 	 * free the old string.
 	 */
 
-	if (objPtr->bytes != tclEmptyStringRep && objPtr->bytes != NULL) {
-	    new = (char *) ckrealloc((char *)objPtr->bytes,
+	if (objPtr->bytes != tclEmptyStringRep) {
+	    objPtr->bytes = ckrealloc((char *)objPtr->bytes,
 		    (unsigned)(length+1));
 	} else {
-	    new = (char *) ckalloc((unsigned) (length+1));
+	    char *new = ckalloc((unsigned) (length+1));
 	    if (objPtr->bytes != NULL && objPtr->length != 0) {
 		memcpy((void *) new, (void *) objPtr->bytes,
 			(size_t) objPtr->length);
 		Tcl_InvalidateStringRep(objPtr);
 	    }
+	    objPtr->bytes = new;
 	}
-	objPtr->bytes = new;
 	stringPtr->allocated = length;
 
 	/*
@@ -884,14 +883,13 @@ Tcl_AttemptSetObjLength(
 	 * free the old string.
 	 */
 
-	if (objPtr->bytes != tclEmptyStringRep && objPtr->bytes != NULL) {
-	    new = (char *) attemptckrealloc((char *)objPtr->bytes,
-		    (unsigned)(length+1));
+	if (objPtr->bytes != tclEmptyStringRep) {
+	    new = attemptckrealloc(objPtr->bytes, (unsigned)(length+1));
 	    if (new == NULL) {
 		return 0;
 	    }
 	} else {
-	    new = (char *) attemptckalloc((unsigned) (length+1));
+	    new = attemptckalloc((unsigned) (length+1));
 	    if (new == NULL) {
 		return 0;
 	    }
